# backend

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  compile_external.sh  init.sql  init_aesir_main.sql  seed.sql
migrations/20160724204303_create_users_table/: up.sql
src/: CMakeLists.txt  main.cpp  main.rs
src/database/: location.rs  mod.rs  user.rs  zone.rs
src/message_handlers/: message_handler.cpp  message_handler.h
src/message_handlers/backend/: backend_create_character_handler.cpp  backend_create_character_handler.h  backend_login_handler.cpp  backend_login_handler.h  backend_quit_handler.cpp  backend_quit_handler.h  backend_register_handler.cpp  backend_register_handler.h
src/message_handlers/client/: client_admin_quit_handler.cpp  client_admin_quit_handler.h
src/message_handlers/server/: server_quit_handler.cpp  server_quit_handler.h
src/repositories/: banned_users_repository.cpp  banned_users_repository.h  repository.cpp  settings_repository.cpp  users_repository.cpp  users_repository.h
src/sql_repositories/: database_connection.h  database_pool.cpp  database_pool.h  database_transaction.cpp  database_transaction.h  user_repository.cpp  user_repository.h
test/: CMakeLists.txt  banned_user_repository_tests.cpp  banned_users_repository_tests.cpp  main.cpp  repository_tests.cpp  settings_repository_tests.cpp  users_repository_tests.cpp
