[package]

name = "Realm of Aesir Backend"
version = "0.0.1"
authors = ["Michael de Lang <kingoipo@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/RealmOfAesir/backend"
description = """
Realm of Aesir, a multiplayer online game.
"""

[[bin]]
name = "aesir"
test = true

[dependencies]
bcrypt = "0.1"
diesel = { git = "https://github.com/diesel-rs/diesel" }
diesel_codegen = { git = "https://github.com/diesel-rs/diesel", default-features = false, features = ["nightly", "postgres"] }
dotenv = { git = "https://github.com/slapresta/rust-dotenv", branch="sg-bump-syntex" }
dotenv_codegen = { git = "https://github.com/slapresta/rust-dotenv", branch="sg-bump-syntex" }
dotenv_macros = { git = "https://github.com/slapresta/rust-dotenv", branch="sg-bump-syntex" }
websocket = "0.17.1"
